Add company paragraph

--- a/index.html
+++ b/index.html
@@ -2970,13 +2970,8 @@ body,
 <p>La meva decisió de triar la modalitat DUAL de pràctiques va estar motivada principalment pels beneficis que proporciona respecte de les FCT estàndard. Un any complet en una empresa proporciona una oportunitat de desenvolupar habilitats útils al món laboral real, aprendre com funciona realment el desenvolupament a escala professional i aprendre d'altres professionals en actiu del sector. A més, les probabilitats d'aconseguir ingressar al món laboral mitjançant l'empresa on s'ha realitzat l'estada són molt altes.</p>
 <p>El meu principal objectiu és aconseguir aprofitar aquesta oportunitat de tal forma que, un cop terminat el període de pràctiques, l'empresa em contracti com a treballador, de forma que hauria aconseguit un any d'experiència laboral al sector i introduir-me al mercat laboral.</p>
 <h2 id="2-dades-de-lentitat-">2. Dades de l'entitat <a name="dades-de-lentitat"></a></h2>
-<ul>
-<li>Nom i adreça de l'entitat:</li>
-<li>Descripció de les activitats de l'empresa:</li>
-<li>Organigrama de l'entitat i ubicació del departament:</li>
-<li>Descripció del departament:</li>
-<li>Infraestructura de l'entitat i eines disponibles:</li>
-</ul>
+<p>L'entitat on he realitzat l'estada és Logic&amp;Automatització, situada al carrer de Colom, 485, Terrassa. L'empresa es dedica específicament a l'automatització i monitoratge de plantes de producció i processos industrials amb la venda i instal·lació de maquinari específic, i també, amb el seu programari propi, el LOGiPlatform. Proporciona suport específic per a cada client, mentre continua desenvolupant i millorant el seu producte per ampliar la cobertura de necessitats i arribar a més clients.</p>
+<p>L'organització es divideix entre dos departaments; el Departament Tècnic, que s'encarrega de la programació i instal·lació del maquinari i el suport als clients i el departament de desenvolupament, que és l'encarregat de desenvolupar el LOGiPlatform, millorant-lo i solucionar errors o bugs.</p>
 <h2 id="3-dades-de-lestada-">3. Dades de l'estada <a name="dades-de-lestada"></a></h2>
 <p>Tipus de contracte o beca:
 Beneficis socials:
