--- a/index.html
+++ b/index.html
@@ -2973,16 +2973,10 @@ body,
 <p>L'entitat on he realitzat l'estada és Logic&amp;Automatització, situada al carrer de Colom, 485, Terrassa. L'empresa es dedica específicament a l'automatització i monitoratge de plantes de producció i processos industrials amb la venda i instal·lació de maquinari específic, i també, amb el seu programari propi, el LOGiPlatform. Proporciona suport específic per a cada client, mentre continua desenvolupant i millorant el seu producte per ampliar la cobertura de necessitats i arribar a més clients.</p>
 <p>L'organització es divideix entre dos departaments; el Departament Tècnic, que s'encarrega de la programació i instal·lació del maquinari i el suport als clients i el departament de desenvolupament, que és l'encarregat de desenvolupar el LOGiPlatform, millorant-lo i solucionar errors o bugs.</p>
 <h2 id="3-dades-de-lestada-">3. Dades de l'estada <a name="dades-de-lestada"></a></h2>
-<p>Tipus de contracte o beca:
-Beneficis socials:
-Total d'hores realitzades en el període de prova:
-Total d'hores realitzades com a becari o contractat:
-Temporització de l'estada:</p>
+<p>En el meu cas la meva estada dual ha sigut com a becari, mitjançant una beca estudiantil, el temps total realitzat com a període de prova ha sigut d'unes 100 hores durant el mes de juny de 2023. Un cop vaig finalitzar el període de prova vaig començar al 18 de setembre de 2023 fins al 13 de maig de 2024, completant així les 900 hores d'estada dual corresponent.</p>
 <h2 id="4-relacions-professionals-i-seguiment-de-lestada-">4. Relacions professionals i seguiment de l'estada <a name="relacions-professionals-i-seguiment-de-lestada"></a></h2>
-<p>Nom del tutor/a de l'institut:
-Nom del tutor/a de l'entitat i càrrec:
-Comunicació amb els tutors/es:
-Comunicació amb companys/es i usuaris:</p>
+<p>El meu tutor de l'institut és el Jordi Lordan Burgos. El meu tutor a l'empresa va ser el Carles Plumed, qui és el meu cap de departament, però va ser substituït pel Josep Riera, el gerent de l'empresa a la renovació de conveni per motius administratius.</p>
+<p>La comunicació tant amb els tutors com els companys és bona, responen als meus dubtes i em proporcionen ajuda i solucions quan ho requereixo.</p>
 <h2 id="5-diari-de-pràctiques-">5. Diari de pràctiques <a name="diari-de-practiques"></a></h2>
 <h3 id="període-de-prova">Període de prova</h3>
 <h4 id="tasca-1">Tasca 1:</h4>
