add entry for trial period

--- a/index.html
+++ b/index.html
@@ -2952,9 +2952,10 @@ body,
 <ul>
 <li><a href="#per%C3%ADode-de-prova">Període de prova</a>
 <ul>
-<li><a href="#tasca-1">Tasca 1:</a></li>
+<li><a href="#juny-de-2023">Juny de 2023</a></li>
 </ul>
 </li>
+<li><a href="#tasca-1">Tasca 1:</a></li>
 <li><a href="#per%C3%ADode-de-becari-o-contractat">Període de becari o contractat</a></li>
 </ul>
 </li>
@@ -2970,15 +2971,26 @@ body,
 <p>La meva decisió de triar la modalitat DUAL de pràctiques va estar motivada principalment pels beneficis que proporciona respecte de les FCT estàndard. Un any complet en una empresa proporciona una oportunitat de desenvolupar habilitats útils al món laboral real, aprendre com funciona realment el desenvolupament a escala professional i aprendre d'altres professionals en actiu del sector. A més, les probabilitats d'aconseguir ingressar al món laboral mitjançant l'empresa on s'ha realitzat l'estada són molt altes.</p>
 <p>El meu principal objectiu és aconseguir aprofitar aquesta oportunitat de tal forma que, un cop terminat el període de pràctiques, l'empresa em contracti com a treballador, de forma que hauria aconseguit un any d'experiència laboral al sector i introduir-me al mercat laboral.</p>
 <h2 id="2-dades-de-lentitat-">2. Dades de l'entitat <a name="dades-de-lentitat"></a></h2>
-<p>L'entitat on he realitzat l'estada és Logic&amp;Automatització, situada al carrer de Colom, 485, Terrassa. L'empresa es dedica específicament a l'automatització i monitoratge de plantes de producció i processos industrials amb la venda i instal·lació de maquinari específic, i també, amb el seu programari propi, el LOGiPlatform. Proporciona suport específic per a cada client, mentre continua desenvolupant i millorant el seu producte per ampliar la cobertura de necessitats i arribar a més clients.</p>
+<p>L'entitat on he realitzat l'estada és Logic&amp;Automatització, situada al carrer de Colom, 485, Terrassa. L'empresa es dedica específicament a l'automatització i monitoratge de plantes de producció i processos industrials amb la venda i instal·lació de maquinari específic, i també, la distribució del seu programari propi, el LOGiPlatform. Proporciona suport específic per a cada client, mentre continua desenvolupant i millorant el seu producte per ampliar la cobertura de necessitats i arribar a més clients.</p>
 <p>L'organització es divideix entre dos departaments; el Departament Tècnic, que s'encarrega de la programació i instal·lació del maquinari i el suport als clients i el departament de desenvolupament, que és l'encarregat de desenvolupar el LOGiPlatform, millorant-lo i solucionar errors o bugs.</p>
 <h2 id="3-dades-de-lestada-">3. Dades de l'estada <a name="dades-de-lestada"></a></h2>
 <p>En el meu cas la meva estada dual ha sigut com a becari, mitjançant una beca estudiantil, el temps total realitzat com a període de prova ha sigut d'unes 100 hores durant el mes de juny de 2023. Un cop vaig finalitzar el període de prova vaig començar al 18 de setembre de 2023 fins al 13 de maig de 2024, completant així les 900 hores d'estada dual corresponent.</p>
 <h2 id="4-relacions-professionals-i-seguiment-de-lestada-">4. Relacions professionals i seguiment de l'estada <a name="relacions-professionals-i-seguiment-de-lestada"></a></h2>
+<ul>
+<li>Nom del tutor/a de l’institut.</li>
+<li>Nom del tutor/a de l’entitat i càrrec que ocupa.</li>
+<li>Com ha estat la comunicació amb els vostres tutors/es, tant el de l’institut, com el de
+l’entitat.</li>
+<li>Com ha estat la comunicació amb la resta de companys/es de l’entitat i usuaris
+(clients).</li>
+<li>Valoració del seguiment de la doble tutoria (entitat-institut).</li>
+</ul>
 <p>El meu tutor de l'institut és el Jordi Lordan Burgos. El meu tutor a l'empresa va ser el Carles Plumed, qui és el meu cap de departament, però va ser substituït pel Josep Riera, el gerent de l'empresa a la renovació de conveni per motius administratius.</p>
-<p>La comunicació tant amb els tutors com els companys és bona, responen als meus dubtes i em proporcionen ajuda i solucions quan ho requereixo.</p>
+<p>La comunicació tant amb els tutors com els companys ha sigut molt bona, en tot moment he tingut ajuda en cas de necessitar-la, han respost als meus dubtes i m'han proporcionat ajuda i solucions quan ho he necessitat. De la mateixa manera amb el seguiment per part de l'empresa i el centre, que m'han acompanyat supervisant el meu treball i progressos.</p>
 <h2 id="5-diari-de-pràctiques-">5. Diari de pràctiques <a name="diari-de-practiques"></a></h2>
-<h3 id="període-de-prova">Període de prova</h3>
+<h4 id="període-de-prova">Període de prova</h4>
+<h6 id="juny-de-2023">Juny de 2023</h6>
+<p>Inicialment, durant el període de prova, la meva tasca principal ha estat aprendre sobre JavaScript, ja que encara no hem començat el curs i no tenia experiència prèvia en aquest llenguatge. M'he concentrat a familiaritzar-me amb les peculiaritats del llenguatge, com el DOM, les funcions de callbacks, l'asincronia, les trucades a API externes, funcions d'objectes, etc. Amb l'ajuda de l'anterior estudiant de DUAL, que actualment és aquí, he trobat diversos cursos gratuïts de JavaScript que he seguit per aprofundir en aquests conceptes.</p>
 <h4 id="tasca-1">Tasca 1:</h4>
 <ul>
 <li>Descripció de la tasca:</li>
