add entry for 2023 period

--- a/index.html
+++ b/index.html
@@ -2950,13 +2950,10 @@ body,
 <li><a href="#4-relacions-professionals-i-seguiment-de-lestada-">4. Relacions professionals i seguiment de l'estada </a></li>
 <li><a href="#5-diari-de-pr%C3%A0ctiques-">5. Diari de pràctiques </a>
 <ul>
-<li><a href="#per%C3%ADode-de-prova">Període de prova</a>
-<ul>
-<li><a href="#juny-de-2023">Juny de 2023</a></li>
-</ul>
-</li>
-<li><a href="#tasca-1">Tasca 1:</a></li>
-<li><a href="#per%C3%ADode-de-becari-o-contractat">Període de becari o contractat</a></li>
+<li><a href="#per%C3%ADode-de-prova-">Període de prova </a></li>
+<li><a href="#14-de-setembre---3-doctubre">14 de setembre - 3 d'octubre</a></li>
+<li><a href="#4-doctubre---25-doctubre">4 d'octubre - 25 d'octubre</a></li>
+<li><a href="#26-doctubre---12-de-gener">26 d'octubre - 12 de gener</a></li>
 </ul>
 </li>
 <li><a href="#6-problemes-sorgits-en-fer-lestada-dual-">6. Problemes sorgits en fer l'estada dual </a></li>
@@ -2988,10 +2985,20 @@ l’entitat.</li>
 <p>El meu tutor de l'institut és el Jordi Lordan Burgos. El meu tutor a l'empresa va ser el Carles Plumed, qui és el meu cap de departament, però va ser substituït pel Josep Riera, el gerent de l'empresa a la renovació de conveni per motius administratius.</p>
 <p>La comunicació tant amb els tutors com els companys ha sigut molt bona, en tot moment he tingut ajuda en cas de necessitar-la, han respost als meus dubtes i m'han proporcionat ajuda i solucions quan ho he necessitat. De la mateixa manera amb el seguiment per part de l'empresa i el centre, que m'han acompanyat supervisant el meu treball i progressos.</p>
 <h2 id="5-diari-de-pràctiques-">5. Diari de pràctiques <a name="diari-de-practiques"></a></h2>
-<h4 id="període-de-prova">Període de prova</h4>
-<h6 id="juny-de-2023">Juny de 2023</h6>
-<p>Inicialment, durant el període de prova, la meva tasca principal ha estat aprendre sobre JavaScript, ja que encara no hem començat el curs i no tenia experiència prèvia en aquest llenguatge. M'he concentrat a familiaritzar-me amb les peculiaritats del llenguatge, com el DOM, les funcions de callbacks, l'asincronia, les trucades a API externes, funcions d'objectes, etc. Amb l'ajuda de l'anterior estudiant de DUAL, que actualment és aquí, he trobat diversos cursos gratuïts de JavaScript que he seguit per aprofundir en aquests conceptes.</p>
-<h4 id="tasca-1">Tasca 1:</h4>
+<h3 id="període-de-prova-">Període de prova <a name="període-de-prova"></a></h3>
+<p>Inicialment, durant el període de prova, la meva tasca principal ha estat aprendre sobre JavaScript i NodeJS, ja que encara no hem començat el curs i no tenia cap coneixement en aquest llenguatge. M'he concentrat en familiaritzar-me amb les peculiaritats del llenguatge, com el DOM, les funcions de callbacks, l'asincronia, les trucades a API externes, funcions d'objectes, etc. Amb l'ajuda d'un company, que actualment està acabant la seva estada DUAL, he trobat diversos cursos gratuïts de JavaScript que he seguit per aprofundir en aquests conceptes.</p>
+<h3 id="14-de-setembre---3-doctubre">14 de setembre - 3 d'octubre</h3>
+<p>Un cop he finalitzat el període de prova, he començat l'estada DUAL. He començat a aprendre sobre Angular, el framework per desenvolupar la part de client que s'utilitza a l'empresa. Un cop més he començat amb cursos gratuïts i petits projectes per aprofundir en el framework.</p>
+<p>Aquesta tasca ha sigut una mica complicada, ja que en certa manera he hagut d'aprendre de manera autodidàctica, el que és una mica difícil si no tens unes guies a seguir de forma estructurada.</p>
+<p>Un cop he estat unes setmanes aprenent sobre Angular, he tingut accés a una còpia del producte de l'empresa, el LOGiPlatform, això m'ha permès aprendre sobre el projecte, i encara més, entendre com s'estructura Angular i com funciona en un projecte real.</p>
+<h3 id="4-doctubre---25-doctubre">4 d'octubre - 25 d'octubre</h3>
+<p>Un cop finalitzat el període d'aprenentatge d'Angular, he rebut la meva primera tasca amb un impacte real sobre el projecte de l'empresa. La tasca consisteix a refer la validació dels formularis de l'aplicació. Actualment, hi ha formularis amb validacions específiques a cadascun d'ells, això fa que sigui poc escalable i difícil de mantenir. L'objectiu és centralitzar-ho tot a un mòdul o servei, perquè sigui molt fàcil implementar nous formularis i la validació de les dades ràpidament.</p>
+<p>La meva idea ha estat fer un servei d'Angular que en funció d'uns models/esquemes de dades, es validin les dades obtingudes del formulari, i en cas que no siguin correctes, mostri un error en el formulari definit a l'esquema.</p>
+<p>En aquesta tasca he après més en profunditat sobre Angular, i com es realitza la comunicació entre components i serveis. La tasca ha estat realment bé, ja que he tingut l'ajuda del meu tutor el qual m'ha anat guiant una mica a l'hora de com enfocar la tasca i entendre el funcionament del projecte.</p>
+<h3 id="26-doctubre---12-de-gener">26 d'octubre - 12 de gener</h3>
+<p>Donat que el meu tutor de l'empresa ha estat subcontractat per un client, el desenvolupament de l'aplicació ha estat una mica parat. Per tant, m'han assignat una altra tasca una mica a part del projecte principal. La tasca tracta de desenvolupar una demo per a un client amb uns requisits específics amb el LOGiPlatform con a base.</p>
+<p>L'objectiu és desenvolupar una demo en la qual es pugui visualitzar dades en temps real i la seva gestió interna, a més a més de registar i consultar dades manuals. La part de gestió de dades és la part específica que s'ha de desenvolupar de forma espécifica.</p>
+<p>En aquesta tasca he tingut accés a requisits específics d'una entitat, el qual m'ha proporcionat la capacitat d'entendre el que vol el client i portar-ho a la plataforma. També ha canviat la meva mentalitat per entendre que s'han de desenvolupar les funcionalitats que demana el client, i no més enllà, ja que seria un treball extra no demanat. Igualment, m'ha aportat la capacitat d'investigar codi i com funciona en profunditat, perquè la demo estava començada però no hi havia cap documentació ni repositori de git per veure les diferències o funcionalitats afegides.</p>
 <ul>
 <li>Descripció de la tasca:</li>
 <li>Coneixements aplicats apresos en l'institut:</li>
@@ -3003,8 +3010,6 @@ l’entitat.</li>
 <li>Relació amb les activitats del cicle:</li>
 <li>Valoració de la tasca:</li>
 </ul>
-<h3 id="període-de-becari-o-contractat">Període de becari o contractat</h3>
-<p>(Repetir el format anterior per cada tasca)</p>
 <h2 id="6-problemes-sorgits-en-fer-lestada-dual-">6. Problemes sorgits en fer l'estada dual <a name="problemes-sorgits-en-fer-lestada-dual"></a></h2>
 <ul>
 <li>Problema 1:
