adds daily done

--- a/index.html
+++ b/index.html
@@ -2944,7 +2944,11 @@ body,
 <li><a href="#emilio-fern%C3%A1ndez---mem%C3%B2ria-de-lestada-dual">Emilio Fernández - Memòria de l'estada dual</a>
 <ul>
 <li><a href="#%C3%ADndex">Índex</a></li>
-<li><a href="#1-presentaci%C3%B3-de-lalumne-">1. Presentació de l'alumne </a></li>
+<li><a href="#1-presentaci%C3%B3-de-lalumne-">1. Presentació de l'alumne </a>
+<ul>
+<li><a href="#v%C3%ADdeo-de-la-estada-dual">Vídeo de la estada DUAL</a></li>
+</ul>
+</li>
 <li><a href="#2-dades-de-lentitat-">2. Dades de l'entitat </a></li>
 <li><a href="#3-dades-de-lestada-">3. Dades de l'estada </a></li>
 <li><a href="#4-relacions-professionals-i-seguiment-de-lestada-">4. Relacions professionals i seguiment de l'estada </a></li>
@@ -2953,7 +2957,13 @@ body,
 <li><a href="#per%C3%ADode-de-prova-">Període de prova </a></li>
 <li><a href="#14-de-setembre---3-doctubre">14 de setembre - 3 d'octubre</a></li>
 <li><a href="#4-doctubre---25-doctubre">4 d'octubre - 25 d'octubre</a></li>
+<li><a href="#26-doctubre---17-de-novembre">26 d'octubre - 17 de novembre</a></li>
 <li><a href="#26-doctubre---12-de-gener">26 d'octubre - 12 de gener</a></li>
+<li><a href="#15-de-gener---23-de-febrer">15 de gener - 23 de febrer</a></li>
+<li><a href="#26-de-febrer---13-de-mar%C3%A7">26 de febrer - 13 de març</a></li>
+<li><a href="#14-de-mar%C3%A7---26-dabril">14 de març - 26 d'abril</a></li>
+<li><a href="#29-dabril---22-de-maig">29 d'abril - 22 de maig</a></li>
+<li><a href="#23-de-maig---31-de-juny">23 de maig - 31 de juny</a></li>
 </ul>
 </li>
 <li><a href="#6-problemes-sorgits-en-fer-lestada-dual-">6. Problemes sorgits en fer l'estada dual </a></li>
@@ -2962,6 +2972,7 @@ body,
 </li>
 </ul>
 <h2 id="1-presentació-de-lalumne-">1. Presentació de l'alumne <a name="presentacio-de-lalumne"></a></h2>
+<h3 id="vídeo-de-la-estada-dual"><a href="https://youtu.be/xIAJuJYBig4">Vídeo de la estada DUAL</a></h3>
 <p>El meu nom és Emilio Fernández Vicente i estic cursant el Cicle de Grau Superior de <a href="https://xtec.gencat.cat/web/.content/alfresco/d/d/workspace/SpacesStore/0032/0155e929-9014-48a5-ab28-aa6e8e75e554/BOE_GS_Aplic_web.pdf">Desenvolupament d'Aplicacions Web</a> a l'Institut Nicolau Copèrnic, a la meva ciutat, Terrassa.</p>
 <p>El Nicolau Copèrnic és un institut el qual compta amb diversos cicles d'informàtica de grau superior: Desenvolupament d'aplicacions multiplataforma (DAM), administració de sistemes informàtics en xarxa (ASIX) i desenvolupament d'aplicacions web (DAW) el qual jo estic cursant.</p>
 <p>A una experiència anterior a la universitat, vaig descobrir la programació i em vaig apassionar per aquest camp. Un cop vaig deixar el grau universitari, vaig decidir estudiar un cicle formatiu d'aplicacions web al Nicolau Copèrnic. El meu objectiu és adquirir les habilitats i coneixements necessaris per poder dedicar-me professionalment a l'àmbit del desenvolupament d'aplicacions i la tecnologia.</p>
@@ -2995,37 +3006,53 @@ l’entitat.</li>
 <p>Un cop finalitzat el període d'aprenentatge d'Angular, he rebut la meva primera tasca amb un impacte real sobre el projecte de l'empresa. La tasca consisteix a refer la validació dels formularis de l'aplicació. Actualment, hi ha formularis amb validacions específiques a cadascun d'ells, això fa que sigui poc escalable i difícil de mantenir. L'objectiu és centralitzar-ho tot a un mòdul o servei, perquè sigui molt fàcil implementar nous formularis i la validació de les dades ràpidament.</p>
 <p>La meva idea ha estat fer un servei d'Angular que en funció d'uns models/esquemes de dades, es validin les dades obtingudes del formulari, i en cas que no siguin correctes, mostri un error en el formulari definit a l'esquema.</p>
 <p>En aquesta tasca he après més en profunditat sobre Angular, i com es realitza la comunicació entre components i serveis. La tasca ha estat realment bé, ja que he tingut l'ajuda del meu tutor el qual m'ha anat guiant una mica a l'hora de com enfocar la tasca i entendre el funcionament del projecte.</p>
+<h3 id="26-doctubre---17-de-novembre">26 d'octubre - 17 de novembre</h3>
+<p>La segona tasca he rebut ha estat realitzar un sistema de llenguatges, de tal forma que el client pugui escollir el llenguatge en el qual es mostra l'aplicació. He dissenyat un servei el qual s'inicialitza al component principal de l'aplicació i obté les paraules de l'idioma corresponent de la base de dades, després mitjançant el servei, la resta de components consulten les paraules necessàries per renderitzar la pàgina.</p>
+<p>D'aquesta forma, només es realitza una consulta a la base de dades i el resta de components el poden consultar tantes vegades com necessitin sense afectar el rendiment del servidor. Aquesta tasca m'ha fet pensar per primera vegada en l'aplicació com a dues parts, el client i el servidor i de quina forma es pot optimitzar la funcionalitat perquè el cost de recursos sigui el mínim possible.</p>
 <h3 id="26-doctubre---12-de-gener">26 d'octubre - 12 de gener</h3>
 <p>Donat que el meu tutor de l'empresa ha estat subcontractat per un client, el desenvolupament de l'aplicació ha estat una mica parat. Per tant, m'han assignat una altra tasca una mica a part del projecte principal. La tasca tracta de desenvolupar una demo per a un client amb uns requisits específics amb el LOGiPlatform con a base.</p>
 <p>L'objectiu és desenvolupar una demo en la qual es pugui visualitzar dades en temps real i la seva gestió interna, a més a més de registar i consultar dades manuals. La part de gestió de dades és la part específica que s'ha de desenvolupar de forma espécifica.</p>
 <p>En aquesta tasca he tingut accés a requisits específics d'una entitat, el qual m'ha proporcionat la capacitat d'entendre el que vol el client i portar-ho a la plataforma. També ha canviat la meva mentalitat per entendre que s'han de desenvolupar les funcionalitats que demana el client, i no més enllà, ja que seria un treball extra no demanat. Igualment, m'ha aportat la capacitat d'investigar codi i com funciona en profunditat, perquè la demo estava començada però no hi havia cap documentació ni repositori de git per veure les diferències o funcionalitats afegides.</p>
+<h3 id="15-de-gener---23-de-febrer">15 de gener - 23 de febrer</h3>
+<p>Durant aquest període de temps, no he tingut una tasca clara, de forma que vaig proposar la iniciativa de fer un testatge manual a fons de l'aplicació i documentar (al git issues) i resoldre els bugs que hi trobi, el meu cap directe va acceptar la proposta i l'he estat realitzant. Donat que és un projecte relativament jove i havia de satisfer moltes necessitats per començar a ser rendible, s'havia omès algunes bones pràctiques de fiabilitat i estabilitat de l'aplicació, com tests o configuracions pels desenvolupadors.</p>
+<p>Aquesta tasca ha suposat un repte en alguns casos, ja que identificar un error i trobar l'origen en un codi sense documentar i que encara no era del tot familiar en alguns moments. Però, tot i això, vaig aconseguir resoldre uns vuit errors importants d'experiència d'usuari i uns quinze errors menors.</p>
+<h3 id="26-de-febrer---13-de-març">26 de febrer - 13 de març</h3>
+<p>Un cop he finalitzat la resolució dels errors, he rebut la tasca de desenvolupar una pantalla especial, on utilitzant un ítem anomenat &quot;Forma&quot; es puguin inserir diverses pantalles dins aquests elements, de tal forma que es poden realitzar diferents configuracions de continguts per a la mateixa disposició, a més a més, també desenvolupar una &quot;Llançadora&quot; que permeti a l'usuari enviar pantalles a altres clients.</p>
+<p>En aquesta tasca he entrat en contacte amb el protocol de comunicació MQTT, que permet enviar missatges a través d'un servidor MQTT en temps real, a través de tòpics específics. En aquesta tasca he treballat pensant en la interconnexió dels clients o com a través del servidor d'aquest protocol es poden comunicar per rebre l'enviament de les diverses pantalles.</p>
+<h3 id="14-de-març---26-dabril">14 de març - 26 d'abril</h3>
+<p>Aquesta tasca consisteix a fer una reestructuració al sistema d'usuaris de l'aplicació, de tal forma que es compleixin els següents requisits:</p>
 <ul>
-<li>Descripció de la tasca:</li>
-<li>Coneixements aplicats apresos en l'institut:</li>
-<li>Coneixements aplicats apresos en l'entitat:</li>
-<li>Durada de la tasca:</li>
-<li>Persones implicades:</li>
-<li>Coneixements adquirits:</li>
-<li>Utilitat dels coneixements de l'institut:</li>
-<li>Relació amb les activitats del cicle:</li>
-<li>Valoració de la tasca:</li>
+<li>
+<p>Crear un sistema de gestió d'usuaris, que permeti crear usuaris i rols amb permisos específics.</p>
+</li>
+<li>
+<p>Crear un sistema de gestió de permisos, que permeti crear permisos personalitzats i definir l'accés a les diferents pantalles creades.</p>
+</li>
+<li>
+<p>Crear una configuració que permeti a l'usuari definir el temps de caducitat de la seva sessió.</p>
+</li>
+<li>
+<p>Crear permisos de sistema predefinits, que restringeixin l'accés a les diferents rutes de l'aplicació.</p>
+</li>
+<li>
+<p>Crear un sistema de Audit Trail que permeti registrar les accions de l'usuari en un historial que es pot consultar.</p>
+</li>
 </ul>
+<p>Aquesta ha estat fins al moment la tasca més importat i amb més impacte dins el projecte. He après a com gestionar una tasca gran, fent-la tasques més petites i més fàciles de gestionar, i mica en mica anar complint fins assolir la tasca.</p>
+<p>He tingut problemes a l'hora de tractar l'accés a les rutes en funció dels permisos, ja que en un primer moment obtenia les dades dels permisos del servidor i realitzava la comprovació amb un <em>Guard</em> d'Angular. Aquesta era una mala pràctica, ja que es podien obtenir totes les dades de l'usuari cada cop que s'accedia a una ruta. Vaig realitzar el canvi validant els permisos al servidor i retornant un codi 403 Forbidden en cas que no es permeti l'accés.</p>
+<h3 id="29-dabril---22-de-maig">29 d'abril - 22 de maig</h3>
+<p>Un cop finalitzat el sistema d'usuaris, he rebut una altra tasca que consisteix a crear un sistema d'alarmes, que en funció d'unes variables booleanes que es llegeixen dels dispositius de control de les plantes, es gestionen d'una manera especial, avisant a l'usuari i mostrant un missatge personalitzat.</p>
+<p>En aquest cas havia de treballar sobre el mòdul de comunicació corresponent, però, va ser desenvolupat al principi del projecte i no ha rebut cap manteniment des de llavors. Així que he proposat fer-li un refactor, i de pas, passar-ho al llenguatge TypeScript, millorant l'experiència de desenvolupament i fer quasi sense voler la documentació del mòdul sencer.</p>
+<p>La meva proposta ha estat acceptada i l'he portat a terme sense molts problemes, a més a més de realitzar la gestió d'alarmes. Un cop feta la part de comunicacions he desenvolupat tota la part front-end per poder assignar les variables com a alarmes. En aquesta tasca he pogut treballar amb el protocol de comunicació WebSockets, que permet la comunicació en temps real entre client i servidor, el qual és molt ràpid i eficient. És una tecnologia que és molt senzilla i no requereix un servidor extern com és MQTT, ja que aprofita el mateix servidor HTTP de l'aplicació.</p>
+<p>En aquesta tasca he pogut aplicar unes de les que jo hi considero bones pràctiques per un projecte, com són estils de codi únics, documentació, test, etc. El qual amb el consens dels companys vaig aplicant de mica en mica fer una transició i anar polint el projecte perquè sigui molt més fàcil de mantenir i escalar.</p>
+<h3 id="23-de-maig---31-de-juny">23 de maig - 31 de juny</h3>
+<p>En cas no he rebut una tasca directa, he proposat fer una mica de reestructuració a l'API de l'aplicació, simplificant el directori, eliminar codi obsolet i duplicat, documentar generalment el codi i actualitzar a l'última versió de NodeJS per poder treballar amb les últimes versions dels paquets.</p>
+<p>En aquesta tasca no he tingut cap problema, ha sigut un treball de simplificar codi, localitzar codi que no s'utilitza i substituir funcions de paquets que s'han modificat o han quedat en desús.</p>
 <h2 id="6-problemes-sorgits-en-fer-lestada-dual-">6. Problemes sorgits en fer l'estada dual <a name="problemes-sorgits-en-fer-lestada-dual"></a></h2>
-<ul>
-<li>Problema 1:
-<ul>
-<li>Procediment de resolució:</li>
-</ul>
-</li>
-<li>Problema 2:
-<ul>
-<li>Procediment de resolució:
-(Repetir el format per cada problema)</li>
-</ul>
-</li>
-</ul>
+<p>Un dels problemes que em va sorgir, sobretot quan començava a treballar en el projecte, era com poder proposar el que per mi eren millores o correccions al projecte, sense molestar a la persona que va desenvolupar aquella part. Ja que és un projecte que havia de ser usable ràpidament, es van seguir males pràctiques al desenvolupament.</p>
+<p>Aquest problema el vagi solucionar acceptant inicialment les tasques, i de mica en mica, anar aportant diferents correccions i discutint-les amb l'equip, d'una manera objectiva. A poc a poc vaig anar guanyant confiança i ara no tinc cap problema a proposar millores o debatre a l'hora d'enfocar les funcionalitats.</p>
 <h2 id="7-valoració-personal-de-lestada-dual-">7. Valoració personal de l'estada Dual <a name="valoracio-personal-de-lestada-dual"></a></h2>
-<p>(Expresar la valoración personal aquí)</p>
+<p>La meva estada DUAL ha estat una experiència molt bona, he après moltíssim d'altres professionals del sector, a més a més he pogut dedicar-me professionalment a ser desenvolupador web, estant a un equip real. A l'empresa he rebut una confiança i un suport que m'ha fet ser capaç de poder expressar la meva opinió i així debatre i aprendre amb els companys molt més encara.</p>
 </div>
         </div>
             
